# mycrm

./: pyproject.toml
backend/: _database.db  alembic.ini  database.db  requirements.txt
backend/app/: main.py  models.py
backend/app/api/: main.py
backend/app/api/routes/: customer.py  hello.py
backend/app/core/: db.py
backend/app/models/: __init__.py  base.py  customer.py
backend/migrations/: env.py
backend/migrations/versions/: 2e163039cbde_add_base_model.py  960729ac9cc1_customer.py
